<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Signup">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="back"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_account"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">



        <ImageView
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:src="@drawable/img"
        android:layout_height="100dp"/>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="10dp"
                android:hint="@string/fullname"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/person"
                android:layout_width="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:paddingStart="10dp"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/fullname"
                    android:textSize="17sp">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_margin="10dp"
                android:hint="@string/matric"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/id"
                android:layout_width="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:paddingStart="10dp"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/matric"
                    android:textSize="17sp">

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        android:hint="@string/enter_email"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/email"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:paddingStart="10dp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/email"
            android:textSize="17sp">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        android:hint="@string/enter_password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/lock"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:paddingStart="10dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/password"
            android:textSize="17sp">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.button.MaterialButton
        app:iconSize="24dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_style"
        app:iconGravity="textStart"
        android:onClick="signup"
        android:layout_width="250dp"
        android:text="Create Account"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:layout_height="50dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>